# se_dashboard

./: .gitignore  README.md  amelsensor.py  orelsensor.py  samsensor.py  selimsensor.py  sew.sh  start_all_agregators.sh  start_all_sensors.sh  thomsensor.py
agregator/: agregator.py  london_agregator.py  moscou_agregator.py  newyork_agregator.py  rio_agregator.py  sensor.py  toulouse_agregator.py
dashboard-web/: Cargo.toml  index.html
dashboard-web/js/: mqtt_handler.js
dashboard-web/src/: main.rs
dashboard-web/static/js/: alerts.js  sensor-messages-handler.js
dashboard-web/static/js/demo/: chart-area-demo.js
dashboard-web/templates/: index.html.tera  london.html.tera  map.html.tera  moscou.html.tera  new_york.html.tera  rio.html.tera  toulouse.html.tera
mqtt_scripts/: send_rtemp.py
sensors/: anemo_sensor.py  hum_sensor.py  indice_uv_sensor.py  sensor.py  temp_ext_sensor.py
startbootstrap-sb-admin-2/: agregator1.html  agregator2.html  agregator3.html  agregator4.html  agregator5.html  blank.html  index.html  index_old.html  map.html
svg-json/: car.js  car.json  svgtojs.js  svgtojson.js
svg-json/code/: anaa.js  scriptolcanvas.js
test_mqtt/: pub.py  sub.py  sub_local.py
